@@ -1,3 +1,9 @@
+2001-09-30  Kevin Vandersloot <kfv101@psu.edu>
+
+	* proctable.c: bring back some more functionality
+
+	* callbacks.c, interface.c: ditto
+
 2001-09-29  Kevin Vandersloot <kfv101@psu.edu>
 
 	* proctable.c: add back icon support
